--- a/index.html
+++ b/index.html
@@ -1,11 +1,104 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>W O R L D T O U R</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-       
 
-    </body>
+<head>
+  <title>W O R L D T O U R</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <div class="wrapper">
+    <ul class="timeline">
+      <li class="timeline-item">
+        <div class="tour">
+          <img class="tour-cover" src="images/cover01.png" alt="">
+          <div class="tour-contents">
+            <h2>
+              <strong>2011</strong>
+              TOUR ONE
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+              ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
+            </p>
+
+          </div>
+        </div>
+      </li>
+      <li class="timeline-item">
+        <div class="tour">
+          <img class="tour-cover" src="images/cover02.png" alt="">
+          <div class="tour-contents">
+            <h2>
+              <strong>2011</strong>
+              TOUR ONE
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+              ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
+            </p>
+
+          </div>
+        </div>
+      </li>
+      <li class="timeline-item">
+        <div class="tour">
+          <img class="tour-cover" src="images/cover03.png" alt="">
+          <div class="tour-contents">
+            <h2>
+              <strong>2011</strong>
+              TOUR ONE
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+              ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
+            </p>
+
+          </div>
+        </div>
+      </li>
+      <li class="timeline-item">
+        <div class="tour">
+          <img class="tour-cover" src="images/cover04.png" alt="">
+          <div class="tour-contents">
+            <h2>
+              <strong>2011</strong>
+              TOUR ONE
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+              ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
+            </p>
+
+          </div>
+        </div>
+      </li>
+      <li class="timeline-item">
+        <div class="tour">
+          <img class="tour-cover" src="images/cover05.png" alt="">
+          <div class="tour-contents">
+            <h2>
+              <strong>2011</strong>
+              TOUR ONE
+            </h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+              ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
+            </p>
+
+          </div>
+        </div>
+      </li>
+    </ul>
+
+  </div>
+
+</body>
+
 </html>
