--- a/index.html
+++ b/index.html
@@ -2,102 +2,53 @@
 <html>
 
 <head>
-  <title>W O R L D T O U R</title>
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <div class="wrapper">
-    <ul class="timeline">
-      <li class="timeline-item">
-        <div class="tour">
-          <img class="tour-cover" src="images/cover01.png" alt="">
-          <div class="tour-contents">
-            <h2>
-              <strong>2011</strong>
-              TOUR ONE
-            </h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-              ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
-            </p>
+    <!--CSS 방법론 BEM, OOCSS, SMACSS -->
 
-          </div>
+    <div class="contents">
+        <div class="l_wrapper">
+            <div class="l_sidebar">
+                <div class="checkout clearfix">
+                    <div class="video">
+                        <iframe class="video-iframe"
+                            src="https://player.vimeo.com/video/374410050?color=5cd7d4&byline=0&portrait=0" width="640"
+                            height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    </div>
+                    <div class="checkout-section">
+                        <p class="price">
+                            11,000원
+                            <span class="price-discount">
+                                5,500원
+                            </span>
+                        </p>
+                    </div>
+                    <div class="checkout-section">
+                        <a class="button button_block mb_5" href="">
+                            장바구니 담기
+                        </a>
+                        <a class="button button_block button_important" href="">
+                            바로구매
+                        </a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="l_main">
+                <div class="course">
+                    <div class="course-cover">
+                        Cover
+                    </div>
+                    <div class="course-section">
+                        Section
+                    </div>
+                </div>
+            </div>
         </div>
-      </li>
-      <li class="timeline-item">
-        <div class="tour">
-          <img class="tour-cover" src="images/cover02.png" alt="">
-          <div class="tour-contents">
-            <h2>
-              <strong>2011</strong>
-              TOUR ONE
-            </h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-              ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
-            </p>
-
-          </div>
-        </div>
-      </li>
-      <li class="timeline-item">
-        <div class="tour">
-          <img class="tour-cover" src="images/cover03.png" alt="">
-          <div class="tour-contents">
-            <h2>
-              <strong>2011</strong>
-              TOUR ONE
-            </h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-              ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
-            </p>
-
-          </div>
-        </div>
-      </li>
-      <li class="timeline-item">
-        <div class="tour">
-          <img class="tour-cover" src="images/cover04.png" alt="">
-          <div class="tour-contents">
-            <h2>
-              <strong>2011</strong>
-              TOUR ONE
-            </h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-              ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
-            </p>
-
-          </div>
-        </div>
-      </li>
-      <li class="timeline-item">
-        <div class="tour">
-          <img class="tour-cover" src="images/cover05.png" alt="">
-          <div class="tour-contents">
-            <h2>
-              <strong>2011</strong>
-              TOUR ONE
-            </h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-              Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-              ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat
-            </p>
-
-          </div>
-        </div>
-      </li>
-    </ul>
-
-  </div>
+    </div>
 
 </body>
 
